crates/backyard-lexer/tests/snapshots/keywords__require_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 291
expression: tokens
snapshot_kind: text
---
- token_type: Require
  value: require
  line: 1
  column: 0
  offset: 0
