crates/backyard-lexer/tests/snapshots/keywords__return_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Return
  value:
    - 114
    - 101
    - 116
    - 117
    - 114
    - 110
  line: 1
  column: 0
  offset: 0
