crates/backyard-lexer/tests/snapshots/keywords__self_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 321
expression: tokens
snapshot_kind: text
---
- token_type: SelfKeyword
  value: self
  line: 1
  column: 0
  offset: 0
