crates/backyard-lexer/tests/snapshots/keywords__set_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 450
expression: tokens
snapshot_kind: text
---
- token_type: Set
  value: set
  line: 1
  column: 0
  offset: 0
