crates/backyard-lexer/tests/snapshots/keywords__static_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 306
expression: tokens
snapshot_kind: text
---
- token_type: Static
  value: static
  line: 1
  column: 0
  offset: 0
