crates/backyard-lexer/tests/snapshots/keywords__switch_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 326
expression: tokens
snapshot_kind: text
---
- token_type: Switch
  value: switch
  line: 1
  column: 0
  offset: 0
