crates/backyard-lexer/tests/snapshots/keywords__throw_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Throw
  value:
    - 116
    - 104
    - 114
    - 111
    - 119
  line: 1
  column: 0
  offset: 0
