crates/backyard-lexer/tests/snapshots/keywords__trait_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Trait
  value:
    - 116
    - 114
    - 97
    - 105
    - 116
  line: 1
  column: 0
  offset: 0
