crates/backyard-lexer/tests/snapshots/keywords__true_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: "True"
  value:
    - 116
    - 114
    - 117
    - 101
  line: 1
  column: 0
  offset: 0
