crates/backyard-lexer/tests/snapshots/keywords__try_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Try
  value:
    - 116
    - 114
    - 121
  line: 1
  column: 0
  offset: 0
