crates/backyard-lexer/tests/snapshots/keywords__use_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Use
  value:
    - 117
    - 115
    - 101
  line: 1
  column: 0
  offset: 0
