crates/backyard-lexer/tests/snapshots/keywords__var_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Var
  value:
    - 118
    - 97
    - 114
  line: 1
  column: 0
  offset: 0
